fix: remove margin-top on first details child for better alignment

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -785,6 +785,10 @@ details {
       
       ~ * {        
         padding-left: rem( 56 );
+        
+        > *:first-child {
+          margin-top: 0;
+        }
       }
     }
   }
